[CSS Shaders] Parse the geometry descriptor https://bugs.webkit.org/show_bug.cgi?id=110815

Source/WebCore:

Added initial parsing for the "geometry" descriptor, as per specification:
https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html#geometry
This descriptor allows to specify the mesh geometry for custom filters.

Reviewed by Dirk Schulze.

Tests: css3/filters/custom-with-at-rule-syntax/parsing-geometry-property-invalid.html
       css3/filters/custom-with-at-rule-syntax/parsing-geometry-property-valid.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):
(WebCore::CSSParser::parseGeometry): New method that parses the geometry
descriptor (grid()).
(WebCore):
* css/CSSParser.h:
* css/CSSProperty.cpp:
(WebCore::CSSProperty::isInheritedProperty):
* css/CSSPropertyNames.in: Added conditional "geometry" property.
* css/CSSValueKeywords.in: Added conditional "attached" value keyword; detached
was already there.

LayoutTests:

Positive and negative parsing tests for the "geometry" descriptor as
per specification:
https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html#geometry

Reviewed by Dirk Schulze.

* css3/filters/custom-with-at-rule-syntax/parsing-geometry-property-invalid-expected.txt: Added.
* css3/filters/custom-with-at-rule-syntax/parsing-geometry-property-invalid.html: Added.
* css3/filters/custom-with-at-rule-syntax/parsing-geometry-property-valid-expected.txt: Added.
* css3/filters/custom-with-at-rule-syntax/parsing-geometry-property-valid.html: Added.
* css3/filters/custom-with-at-rule-syntax/script-tests/parsing-geometry-property-invalid.js: Added.
(testInvalidGeometryProperty):
* css3/filters/custom-with-at-rule-syntax/script-tests/parsing-geometry-property-valid.js: Added.
(testGeometryProperty):


Canonical link: https://commits.webkit.org/132833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148220 268f45cc-cd09-0410-ab3c-d52691b4dbfc